testdata/baselines/reference/submodule/compiler/inKeywordTypeguard(strict=false).errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Record'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
inKeywordTypeguard.ts(6,11): error TS2339: Property 'b' does not exist on type 'A'.
inKeywordTypeguard.ts(8,11): error TS2339: Property 'a' does not exist on type 'B'.
inKeywordTypeguard.ts(14,11): error TS2339: Property 'b' does not exist on type 'A'.
inKeywordTypeguard.ts(16,11): error TS2339: Property 'a' does not exist on type 'B'.
inKeywordTypeguard.ts(27,11): error TS2339: Property 'b' does not exist on type 'AWithOptionalProp | BWithOptionalProp'.
  Property 'b' does not exist on type 'AWithOptionalProp'.
inKeywordTypeguard.ts(42,11): error TS2339: Property 'b' does not exist on type 'AWithMethod'.
inKeywordTypeguard.ts(49,11): error TS2339: Property 'a' does not exist on type 'AWithMethod | BWithMethod'.
  Property 'a' does not exist on type 'BWithMethod'.
inKeywordTypeguard.ts(50,11): error TS2339: Property 'b' does not exist on type 'AWithMethod | BWithMethod'.
  Property 'b' does not exist on type 'AWithMethod'.
inKeywordTypeguard.ts(52,11): error TS2339: Property 'a' does not exist on type 'AWithMethod | BWithMethod'.
  Property 'a' does not exist on type 'BWithMethod'.
inKeywordTypeguard.ts(53,11): error TS2339: Property 'b' does not exist on type 'AWithMethod | BWithMethod'.
  Property 'b' does not exist on type 'AWithMethod'.
inKeywordTypeguard.ts(62,11): error TS2339: Property 'b' does not exist on type 'A | C | D'.
  Property 'b' does not exist on type 'A'.
inKeywordTypeguard.ts(64,11): error TS2339: Property 'a' does not exist on type 'B'.
inKeywordTypeguard.ts(72,32): error TS2339: Property 'b' does not exist on type 'A'.
inKeywordTypeguard.ts(74,32): error TS2339: Property 'a' does not exist on type 'B'.
inKeywordTypeguard.ts(82,39): error TS2339: Property 'b' does not exist on type 'A'.
inKeywordTypeguard.ts(84,39): error TS2339: Property 'a' does not exist on type 'B'.
inKeywordTypeguard.ts(94,26): error TS2339: Property 'a' does not exist on type 'never'.
inKeywordTypeguard.ts(108,22): error TS2304: Cannot find name 'Error'.
inKeywordTypeguard.ts(147,27): error TS2304: Cannot find name 'window'.
inKeywordTypeguard.ts(148,9): error TS2304: Cannot find name 'window'.
inKeywordTypeguard.ts(150,9): error TS2304: Cannot find name 'window'.
inKeywordTypeguard.ts(155,16): error TS2322: Type 'unknown' is not assignable to type 'object'.
inKeywordTypeguard.ts(156,11): error TS2339: Property 'a' does not exist on type 'unknown'.
inKeywordTypeguard.ts(158,21): error TS2322: Type 'unknown' is not assignable to type 'object'.
inKeywordTypeguard.ts(159,11): error TS2339: Property 'a' does not exist on type 'unknown'.
inKeywordTypeguard.ts(162,11): error TS2339: Property 'a' does not exist on type 'object'.
inKeywordTypeguard.ts(165,11): error TS2339: Property 'a' does not exist on type 'object'.
inKeywordTypeguard.ts(166,11): error TS2339: Property 'b' does not exist on type 'object'.
inKeywordTypeguard.ts(167,11): error TS2339: Property 'c' does not exist on type 'object'.
inKeywordTypeguard.ts(173,11): error TS2339: Property 'a' does not exist on type 'object'.
inKeywordTypeguard.ts(176,11): error TS2339: Property 'a' does not exist on type 'object'.
inKeywordTypeguard.ts(177,11): error TS2339: Property 'b' does not exist on type 'object'.
inKeywordTypeguard.ts(178,11): error TS2339: Property 'c' does not exist on type 'object'.
inKeywordTypeguard.ts(183,16): error TS2322: Type 'T' is not assignable to type 'object'.
inKeywordTypeguard.ts(184,11): error TS2339: Property 'a' does not exist on type 'T'.
inKeywordTypeguard.ts(186,21): error TS2322: Type 'T' is not assignable to type 'object'.
inKeywordTypeguard.ts(187,11): error TS2339: Property 'a' does not exist on type 'T'.
inKeywordTypeguard.ts(190,11): error TS2339: Property 'a' does not exist on type 'T & object'.
inKeywordTypeguard.ts(193,11): error TS2339: Property 'a' does not exist on type 'T & object'.
inKeywordTypeguard.ts(194,11): error TS2339: Property 'b' does not exist on type 'T & object'.
inKeywordTypeguard.ts(195,11): error TS2339: Property 'c' does not exist on type 'T & object'.
inKeywordTypeguard.ts(205,11): error TS2339: Property 'b' does not exist on type '{ a: string; }'.
inKeywordTypeguard.ts(206,11): error TS2339: Property 'c' does not exist on type '{ a: string; }'.
inKeywordTypeguard.ts(251,13): error TS2304: Cannot find name 'Symbol'.
inKeywordTypeguard.ts(255,11): error TS2339: Property 'a' does not exist on type 'object'.
inKeywordTypeguard.ts(265,11): error TS2339: Property 'a' does not exist on type 'object'.
inKeywordTypeguard.ts(327,39): error TS2304: Cannot find name 'Window'.
inKeywordTypeguard.ts(342,23): error TS2304: Cannot find name 'window'.
inKeywordTypeguard.ts(342,55): error TS2304: Cannot find name 'window'.
inKeywordTypeguard.ts(358,34): error TS2304: Cannot find name 'Record'.
inKeywordTypeguard.ts(359,9): error TS2304: Cannot find name 'Array'.
inKeywordTypeguard.ts(367,34): error TS2304: Cannot find name 'Record'.
inKeywordTypeguard.ts(368,9): error TS2304: Cannot find name 'Array'.
inKeywordTypeguard.ts(376,34): error TS2304: Cannot find name 'Record'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Record'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== inKeywordTypeguard.ts (54 errors) ====
    class A { a: string; }
    class B { b: string; }
    
    function negativeClassesTest(x: A | B) {
        if ("a" in x) {
            x.b = "1";
              ~
!!! error TS2339: Property 'b' does not exist on type 'A'.
        } else {
            x.a = "1";
              ~
!!! error TS2339: Property 'a' does not exist on type 'B'.
        }
    }
    
    function positiveClassesTest(x: A | B) {
        if ("a" in x) {
            x.b = "1";
              ~
!!! error TS2339: Property 'b' does not exist on type 'A'.
        } else {
            x.a = "1";
              ~
!!! error TS2339: Property 'a' does not exist on type 'B'.
        }
    }
    
    class AWithOptionalProp { a?: string; }
    class BWithOptionalProp { b?: string; }
    
    function positiveTestClassesWithOptionalProperties(x: AWithOptionalProp | BWithOptionalProp) {
        if ("a" in x) {
            x.a = "1";
        } else {
            x.b = "1";
              ~
!!! error TS2339: Property 'b' does not exist on type 'AWithOptionalProp | BWithOptionalProp'.
!!! error TS2339:   Property 'b' does not exist on type 'AWithOptionalProp'.
        }
    }
    
    class AWithMethod {
        a(): string { return ""; }
    }
    
    class BWithMethod {
        b(): string { return ""; }
    }
    
    function negativeTestClassesWithMembers(x: AWithMethod | BWithMethod) {
        if ("a" in x) {
            x.a();
            x.b();
              ~
!!! error TS2339: Property 'b' does not exist on type 'AWithMethod'.
        } else {
        }
    }
    
    function negativeTestClassesWithMemberMissingInBothClasses(x: AWithMethod | BWithMethod) {
        if ("c" in x) {
            x.a();
              ~
!!! error TS2339: Property 'a' does not exist on type 'AWithMethod | BWithMethod'.
!!! error TS2339:   Property 'a' does not exist on type 'BWithMethod'.
            x.b();
              ~
!!! error TS2339: Property 'b' does not exist on type 'AWithMethod | BWithMethod'.
!!! error TS2339:   Property 'b' does not exist on type 'AWithMethod'.
        } else {
            x.a();
              ~
!!! error TS2339: Property 'a' does not exist on type 'AWithMethod | BWithMethod'.
!!! error TS2339:   Property 'a' does not exist on type 'BWithMethod'.
            x.b();
              ~
!!! error TS2339: Property 'b' does not exist on type 'AWithMethod | BWithMethod'.
!!! error TS2339:   Property 'b' does not exist on type 'AWithMethod'.
        }
    }
    
    class C { a: string; }
    class D { a: string; }
    
    function negativeMultipleClassesTest(x: A | B | C | D) {
        if ("a" in x) {
            x.b = "1";
              ~
!!! error TS2339: Property 'b' does not exist on type 'A | C | D'.
!!! error TS2339:   Property 'b' does not exist on type 'A'.
        } else {
            x.a = "1";
              ~
!!! error TS2339: Property 'a' does not exist on type 'B'.
        }
    }
    
    class ClassWithUnionProp { prop: A | B }
    
    function negativePropTest(x: ClassWithUnionProp) {
        if ("a" in x.prop) {
            let y: string = x.prop.b;
                                   ~
!!! error TS2339: Property 'b' does not exist on type 'A'.
        } else {
            let z: string = x.prop.a;
                                   ~
!!! error TS2339: Property 'a' does not exist on type 'B'.
        }
    }
    
    class NegativeClassTest {
        protected prop: A | B;
        inThis() {
            if ("a" in this.prop) {
                let z: number = this.prop.b;
                                          ~
!!! error TS2339: Property 'b' does not exist on type 'A'.
            } else {
                let y: string = this.prop.a;
                                          ~
!!! error TS2339: Property 'a' does not exist on type 'B'.
            }
        }
    }
    
    class UnreachableCodeDetection {
        a: string;
        inThis() {
            if ("a" in this) {
            } else {
                let y = this.a;
                             ~
!!! error TS2339: Property 'a' does not exist on type 'never'.
            }
        }
    }
    
    function positiveIntersectionTest(x: { a: string } & { b: string }) {
        if ("a" in x) {
            let s: string = x.a;
        } else {
            let n: never = x;
        }
    }
    
    // Repro from #38608
    declare const error: Error;
                         ~~~~~
!!! error TS2304: Cannot find name 'Error'.
    if ('extra' in error) {
        error // Still Error
    } else {
        error // Error
    }
    
    function narrowsToNever(x: { l: number } | { r: number }) {
        let v: number;
        if ("l" in x) {
            v = x.l;
        }
        else if ("r" in x) {
            v = x.r;
        }
        else {
            v = x
        }
        return v;
    }
    
    type AOrB = { aProp: number } | { bProp: number };
    declare function isAOrB(x: unknown): x is AOrB;
    
    declare var x: unknown;
    if (isAOrB(x)) {
        if ("aProp" in x) {
            x.aProp;
        }
        else if ("bProp" in x) {
            x.bProp;
        }
        // x is never because of the type predicate from unknown
        else if ("cProp" in x) {
            const _never: never = x;
        }
    }
    
    function negativeIntersectionTest() {
        if ("ontouchstart" in window) {
                              ~~~~~~
!!! error TS2304: Cannot find name 'window'.
            window.ontouchstart
            ~~~~~~
!!! error TS2304: Cannot find name 'window'.
        } else {
            window.ontouchstart
            ~~~~~~
!!! error TS2304: Cannot find name 'window'.
        }
    }
    
    function f1(x: unknown) {
        if ("a" in x) {
                   ~
!!! error TS2322: Type 'unknown' is not assignable to type 'object'.
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'unknown'.
        }
        if (x && "a" in x) {
                        ~
!!! error TS2322: Type 'unknown' is not assignable to type 'object'.
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'unknown'.
        }
        if (x && typeof x === "object" && "a" in x) {
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'object'.
        }
        if (x && typeof x === "object" && "a" in x && "b" in x && "c" in x) {
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'object'.
            x.b;
              ~
!!! error TS2339: Property 'b' does not exist on type 'object'.
            x.c;
              ~
!!! error TS2339: Property 'c' does not exist on type 'object'.
        }
    }
    
    function f2(x: object) {
        if ("a" in x) {
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'object'.
        }
        if ("a" in x && "b" in x && "c" in x) {
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'object'.
            x.b;
              ~
!!! error TS2339: Property 'b' does not exist on type 'object'.
            x.c;
              ~
!!! error TS2339: Property 'c' does not exist on type 'object'.
        }
    }
    
    function f3<T>(x: T) {
        if ("a" in x) {
                   ~
!!! error TS2322: Type 'T' is not assignable to type 'object'.
!!! related TS2208 inKeywordTypeguard.ts:182:13: This type parameter might need an `extends object` constraint.
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'T'.
        }
        if (x && "a" in x) {
                        ~
!!! error TS2322: Type 'T' is not assignable to type 'object'.
!!! related TS2208 inKeywordTypeguard.ts:182:13: This type parameter might need an `extends object` constraint.
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'T'.
        }
        if (x && typeof x === "object" && "a" in x) {
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'T & object'.
        }
        if (x && typeof x === "object" && "a" in x && "b" in x && "c" in x) {
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'T & object'.
            x.b;
              ~
!!! error TS2339: Property 'b' does not exist on type 'T & object'.
            x.c;
              ~
!!! error TS2339: Property 'c' does not exist on type 'T & object'.
        }
    }
    
    function f4(x: { a: string }) {
        if ("a" in x) {
            x.a;
        }
        if ("a" in x && "b" in x && "c" in x) {
            x.a;
            x.b;
              ~
!!! error TS2339: Property 'b' does not exist on type '{ a: string; }'.
            x.c;
              ~
!!! error TS2339: Property 'c' does not exist on type '{ a: string; }'.
        }
    }
    
    function f5(x: { a: string } | { b: string }) {
        if ("a" in x) {
            x;  // { a: string }
        }
        else if ("b" in x) {
            x;  // { b: string }
        }
        else {
            x;  // never
        }
    }
    
    function f6(x: { a: string } | { b: string }) {
        if ("a" in x) {
            x;  // { a: string }
        }
        else if ("a" in x) {
            x;  // { b: string } & Record<"a", unknown>
        }
        else {
            x;  // { b: string }
        }
    }
    
    // Object and corresponding intersection should narrow the same
    
    function f7(x: { a: string, b: number }, y: { a: string } & { b: number }) {
        if ("a" in x) {
            x;
        }
        else {
            x;  // never
        }
        if ("a" in y) {
            y;
        }
        else {
            y;  // never
        }
    }
    
    const sym = Symbol();
                ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    
    function f8(x: object) {
        if ("a" in x && 1 in x && sym in x) {
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'object'.
            x["a"];
            x[1];
            x["1"];
            x[sym];
        }
    }
    
    function f9(x: object) {
        if ("a" in x && "1" in x && sym in x) {
            x.a;
              ~
!!! error TS2339: Property 'a' does not exist on type 'object'.
            x["a"];
            x[1];
            x["1"];
            x[sym];
        }
    }
    
    function f10(x: { a: unknown }) {
        if ("a" in x) {
            x;
        }
        else {
            x;
        }
    }
    
    function f11(x: { a: any }) {
        if ("a" in x) {
            x;
        }
        else {
            x;
        }
    }
    
    function f12(x: { a: string }) {
        if ("a" in x) {
            x;
        }
        else {
            x;
        }
    }
    
    function f13(x: { a?: string }) {
        if ("a" in x) {
            x;
        }
        else {
            x;
        }
    }
    
    function f14(x: { a: string | undefined }) {
        if ("a" in x) {
            x;
        }
        else {
            x;
        }
    }
    
    function f15(x: { a?: string | undefined }) {
        if ("a" in x) {
            x;
        }
        else {
            x;
        }
    }
    
    function f16(x: typeof globalThis, y: Window & typeof globalThis) {
                                          ~~~~~~
!!! error TS2304: Cannot find name 'Window'.
        x = y;
    }
    
    // Repro from #50639
    
    function foo<A>(value: A) {
        if (typeof value === "object" && value !== null && "prop" in value) {
            value;  // A & object & Record<"prop", unknown>
        }
    }
    
    // Repro from #50954
    
    const checkIsTouchDevice = () =>
        "ontouchstart" in window || "msMaxTouchPoints" in window.navigator;
                          ~~~~~~
!!! error TS2304: Cannot find name 'window'.
                                                          ~~~~~~
!!! error TS2304: Cannot find name 'window'.
    
    // Repro from #51501
    
    function isHTMLTable<T extends object | null>(table: T): boolean {
        return !!table && 'html' in table;
    }
    
    // Repro from #51549
    
    const f = <P extends object>(a: P & {}) => {
        "foo" in a;
    };
    
    // Repro from #53773
    
    function test1<T extends any[] | Record<string, any>>(obj: T) {
                                     ~~~~~~
!!! error TS2304: Cannot find name 'Record'.
        if (Array.isArray(obj) || 'length' in obj) {
            ~~~~~
!!! error TS2304: Cannot find name 'Array'.
          obj;  // T
        }
        else {
          obj;  // T
        }
    }
    
    function test2<T extends any[] | Record<string, any>>(obj: T) {
                                     ~~~~~~
!!! error TS2304: Cannot find name 'Record'.
        if (Array.isArray(obj)) {
            ~~~~~
!!! error TS2304: Cannot find name 'Array'.
          obj;  // T & any[]
        }
        else {
          obj;  // T
        }
    }
    
    function test3<T extends any[] | Record<string, any>>(obj: T) {
                                     ~~~~~~
!!! error TS2304: Cannot find name 'Record'.
        if ('length' in obj) {
          obj;  // T
        }
        else {
          obj;  // T
        }
    }
    